fix overflow behavior in context inspector on firefox

--- a/src/hazelweb/www/style.css
+++ b/src/hazelweb/www/style.css
@@ -646,7 +646,7 @@ details:focus {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: fit-content(200px) 1fr;
-  overflow: overlay;
+  overflow: scroll;
 }
 .context-entry {
   border: 1px outset #ffffff;
